# OptiPro_CNC

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
include/: Commands.hpp  ConcurrentQueue.hpp  Engine.hpp  GeneratorUtils.hpp  Gui.hpp  Job.hpp  Machine.hpp  NewGui.hpp  Operation.hpp  Optimizer.hpp  Part.hpp  types.hpp  utils.h
src/: Gui.cpp  Job.cpp  Machine.cpp  Operation.cpp  Optimizer.cpp  Part.cpp  main.cpp
